fix/Centering issues on mobile devices

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,8 @@
 
 html {
   font-size: 12px;
+  font-weight: normal;
+  font-style: normal; 
   @screen md {
     font-size: 10px;
   }
@@ -39,6 +41,13 @@ body {
   background: linear-gradient(to bottom,
       transparent,
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+}
+
+.centerAbsolute{
+  position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
 }
 
 @layer utilities {
